--- a/art.html
+++ b/art.html
@@ -49,7 +49,7 @@
             <p>It was a fun experience and I learned a lot</p>
         </div>
 
-        <a href="Index.html"> <button>BACK TO MAIN PAGE</button></a>
+        <a href="index.html"> <button>BACK TO MAIN PAGE</button></a>
     </article>
 
     <footer>
