--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="website icon"tvpe="jpg" href="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\Rashid_Mugi PASSPORT PIC.jpg">
+    <link rel="website icon"tvpe="jpg" href="..\Images\Rashid_Mugi PASSPORT PIC.jpg">
     <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
 </head>
