--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
     <h1>Welcome to My Portfolio</h1>
-    <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\Rashid_Mugi PASSPORT PIC.jpg" alt="passport pic" style="width: 200px; height: 200px; border-radius: 50%; border: 2px solid #fddb92;">
+    <img src="..\Images\Rashid_Mugi PASSPORT PIC.jpg" alt="passport pic" style="width: 200px; height: 200px; border-radius: 50%; border: 2px solid #fddb92;">
     <p>Hi &#128075;, I'm Rashid, nice to meet you! 😊</p>
     <p>I am a self-taught artist 🎨, software developer 💻, and avid learner of Cybersecurity 🔒.</p>
     <p>Get to know me &#128521;!  See my work below! 👇</p>
