--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
     <h1>Welcome to My Portfolio</h1>
-    <img src="..\Images\Rashid_Mugi PASSPORT PIC.jpg" alt="passport pic" style="width: 200px; height: 200px; border-radius: 50%; border: 2px solid #fddb92;">
+    <img src="../Images/Rashid_Mugi PASSPORT PIC.jpg" alt="passport pic" style="width: 200px; height: 200px; border-radius: 50%; border: 2px solid #fddb92;">
     <p>Hi &#128075;, I'm Rashid, nice to meet you! 😊</p>
     <p>I am a self-taught artist 🎨, software developer 💻, and avid learner of Cybersecurity 🔒.</p>
     <p>Get to know me &#128521;!  See my work below! 👇</p>
@@ -21,13 +21,13 @@
     <footer>
         <h2>Contact Me</h2>
         <a href="https://www.instagram.com/rashiddraws/" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\instagram.png" alt="Instagram">
+            <img src="../Images/instagram.png" alt="Instagram">
         </a>
         <a href="https://www.linkedin.com/in/rashid-mugi-04b634298/" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\linkedin.png" alt="LinkedIn">
+            <img src="../Images/linkedin.png" alt="LinkedIn">
         </a>
         <a href="https://github.com/RASHEEDOH" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\github.png" alt="GitHub">
+            <img src="../Images/github.png" alt="GitHub">
         </a>
     </footer>
     
