--- a/HTML/art.html
+++ b/HTML/art.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="website icon"tvpe="jpg" href="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\Rashid_Mugi PASSPORT PIC.jpg">
+    <link rel="website icon"tvpe="jpg" href="../Images/Rashid_Mugi PASSPORT PIC.jpg">
     <link rel="stylesheet" href="art.css">
     <title>My Art Portfolio</title>
    
@@ -12,7 +12,7 @@
     <h1 style="color: white; text-align: center;">Welcome to My Art Portfolio</h1>
     <div class="About">
         <h1>Background</h1>
-        <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\wukong.gif" alt="" style="width: 700px; height: 400px;border-radius:25px; ">
+        <img src="../Images/wukong.gif" alt="" style="width: 700px; height: 400px;border-radius:25px; ">
         <p>Hi, my name is Rashid Mugi, welcome to my Art portfolio 👋🎨</p>
         <p>I am a self-taught artist with a passion for drawing ✍️ and creativity ✨</p>
         <p>I am eager to bring your ideas to life 💡🖌️</p>
@@ -33,7 +33,7 @@
         <div class="onepiece">
             <h2>OnePiece Painting</h2>
             <video controls>
-                <source src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\Gorosei.mp4" type="video/mp4">
+                <source src="../Images/Gorosei.mp4" type="video/mp4">
             </video> 
             <p>This painting was done as a commissioned artwork</p>   
             <p>It is based on OnePiece characters called the Gorosei</p> 
@@ -42,7 +42,7 @@
         <div class="contest">
             <h2>Clip Studio Contest</h2>
             <video controls>
-                <source src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\FoodIdeas.mp4" type="video/mp4">
+                <source src="../Images/FoodIdeas.mp4" type="video/mp4">
             </video> 
             <p>this painting was done in honour of the clip Studio Paint 42nd contest</p>   
             <p>The theme for the contest was food and cuisines</p>
@@ -55,13 +55,13 @@
     <footer>
         <h2>Contact Me</h2>
         <a href="https://www.instagram.com/rashiddraws/" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\instagram.png" alt="Instagram">
+            <img src="../Images/instagram.png" alt="Instagram">
         </a>
         <a href="https://www.linkedin.com/in/rashid-mugi-04b634298/" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\linkedin.png" alt="LinkedIn">
+            <img src="../Images/linkedin.png" alt="LinkedIn">
         </a>
         <a href="https://github.com/RASHEEDOH" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\github.png" alt="GitHub">
+            <img src=../Images/github.png" alt="GitHub">
         </a>
     </footer>
 
