--- a/HTML/art.html
+++ b/HTML/art.html
@@ -52,7 +52,7 @@
         <a href="index.html"> <button>BACK TO MAIN PAGE</button></a>
     </article>
 
-    <footer>
+     <footer>
         <h2>Contact Me</h2>
         <a href="https://www.instagram.com/rashiddraws/" target="_blank">
             <img src="../Images/instagram.png" alt="Instagram">
@@ -61,9 +61,11 @@
             <img src="../Images/linkedin.png" alt="LinkedIn">
         </a>
         <a href="https://github.com/RASHEEDOH" target="_blank">
-            <img src=../Images/github.png" alt="GitHub">
+            <img src="../Images/github.png" alt="GitHub">
         </a>
     </footer>
+
+    
 
 </body>
 </html>
