Software_dev.html

--- a/HTML/Software_dev.html
+++ b/HTML/Software_dev.html
@@ -66,18 +66,18 @@
         <a href="index.html"><button>Back to Main Page</button></a>
     </article>
 
-    <footer>
+     <footer>
         <h2>Contact Me</h2>
         <a href="https://www.instagram.com/rashiddraws/" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\instagram.png" alt="Instagram">
+            <img src="../Images/instagram.png" alt="Instagram">
         </a>
         <a href="https://www.linkedin.com/in/rashid-mugi-04b634298/" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\linkedin.png" alt="LinkedIn">
+            <img src="../Images/linkedin.png" alt="LinkedIn">
         </a>
         <a href="https://github.com/RASHEEDOH" target="_blank">
-            <img src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\github.png" alt="GitHub">
+            <img src="../Images/github.png" alt="GitHub">
         </a>
     </footer>
-   
+ 
 </body>
 </html>
