--- a/HTML/Software_dev.html
+++ b/HTML/Software_dev.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rashid Mugi | Software Developer & Cybersecurity Enthusiast</title>
-    <link rel="website icon"tvpe="jpg" href="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\Rashid_Mugi PASSPORT PIC.jpg">
+    <link rel="website icon"tvpe="jpg" href="../Images/Rashid_Mugi PASSPORT PIC.jpg">
     <link rel="stylesheet" href="software.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
             <p>I'm passionate about software development and cybersecurity and constantly exploring new technologies to build impactful solutions.</p>
             <p>This portfolio showcases my growth, skills, and projects that reflect my journey and capabilities.</p>
             <video controls>
-                <source src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\Video intro.mp4" type="video/mp4">
+                <source src="../Images/Video intro.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
@@ -50,7 +50,7 @@
         <div class="project">
             <h3>NEIGHBORS GREEN GROCER</h3>
             <video controls>
-                <source src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\NEIGHBORS GREEN GROCER - Google Chrome 2024-09-25 00-36-36.mp4" type="video/mp4">
+                <source src="../Images/NEIGHBORS GREEN GROCER - Google Chrome 2024-09-25 00-36-36.mp4" type="video/mp4">
             </video>
             <p>This was my final year project, inspired by a real business. It features a functional shopping system allowing users to add items to a cart and make purchases. The full code is available on my GitHub.</p>
         </div>
@@ -58,7 +58,7 @@
         <div class="project">
             <h3>LIBRARY MANAGEMENT SYSTEM</h3>
             <video controls>
-                <source src="c:\Users\mugir\OneDrive\Desktop\WEBSITE PORTFOLIO\Images\TheartisanscompanyLIBRARY - Google Chrome 2025-02-19 21-51-09.mp4" type="video/mp4">
+                <source src="../Images/TheartisanscompanyLIBRARY - Google Chrome 2025-02-19 21-51-09.mp4" type="video/mp4">
             </video>
             <p>This project was built using Ruby on Rails and allowed CRUD operations for managing a library system. It strengthened my development and time management skills under tight deadlines.</p>
         </div>
