Updated portfolio layout and improved About Me section

--- a/HTML/Software_dev.html
+++ b/HTML/Software_dev.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rashid Mugi | Software Developer & Cybersecurity Enthusiast</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="website icon"tvpe="jpg" href="../Images/Rashid_Mugi PASSPORT PIC.jpg">
     <link rel="stylesheet" href="software.css">
 </head>
@@ -45,7 +46,7 @@
     </div>
 
     <article>
-        <h2>Notable Projects</h2>
+        <h1>Notable Projects</h1>
 
         <div class="project">
             <h3>NEIGHBORS GREEN GROCER</h3>
@@ -60,24 +61,33 @@
             <video controls>
                 <source src="../Images/TheartisanscompanyLIBRARY - Google Chrome 2025-02-19 21-51-09.mp4" type="video/mp4">
             </video>
-            <p>This project was built using Ruby on Rails and allowed CRUD operations for managing a library system. It strengthened my development and time management skills under tight deadlines.</p>
+            <p>This project was built using Ruby on Rails and allowed CRUD operations for managing a library system. 
+                It strengthened my development and time management skills under tight deadlines.</p>
+        </div>
+        <div class="project">
+            <h3>YOHPAL WEBSITE CONTRIBUTIONS SPREADSHEET</h3>
         </div>
 
         <a href="index.html"><button>Back to Main Page</button></a>
-    </article>
 
-     <footer>
-        <h2>Contact Me</h2>
+         <!--this is the footer content-->
+    <div class="footer_links">
+         <h2>Contact Me</h2>
         <a href="https://www.instagram.com/rashiddraws/" target="_blank">
-            <img src="../Images/instagram.png" alt="Instagram">
+            <i class="fa-brands fa-instagram"></i>
         </a>
         <a href="https://www.linkedin.com/in/rashid-mugi-04b634298/" target="_blank">
-            <img src="../Images/linkedin.png" alt="LinkedIn">
+            <i class="fa-brands fa-linkedin-in"></i>
         </a>
         <a href="https://github.com/RASHEEDOH" target="_blank">
-            <img src="../Images/github.png" alt="GitHub">
+            <i class="fa-brands fa-github"></i>
         </a>
-    </footer>
+    </div>
+
+
+    </article>
+
+     
  
 </body>
 </html>
