Updated portfolio layout and software dev portfolio section

--- a/HTML/Software_dev.html
+++ b/HTML/Software_dev.html
@@ -11,8 +11,8 @@
 <body>
     <div class="about">
         <section class="background">
-            <h1>Welcome to My Software Development Portfolio 😎</h1>
-            <h2>BACKGROUND</h2>
+            <h1>Welcome to My Software Development Portfolio</h1>
+            <h2>MY BACKGROUND</h2>
             <p>Hello! I'm Rashid Mugi, and I recently graduated from KCA University with a Bachelor's Degree in Information Security and Forensics.</p>
             <p>I'm passionate about software development and cybersecurity and constantly exploring new technologies to build impactful solutions.</p>
             <p>This portfolio showcases my growth, skills, and projects that reflect my journey and capabilities.</p>
