Updated portfolio layout and software dev portfolio section

--- a/HTML/Software_dev.html
+++ b/HTML/Software_dev.html
@@ -66,6 +66,14 @@
         </div>
         <div class="project">
             <h3>YOHPAL WEBSITE CONTRIBUTIONS SPREADSHEET</h3>
+            <p>This is a spreadsheet documenting all my contributions via the GitHub repository for YohPal WEBSITE
+               The core concept of maintainence learnt throughout my time were 
+               <ul>
+                <li>Corrective maintainence</li>
+                <li>Perfective maintainence </li>
+                <li>Adaptive maintenance</li>
+               </ul>
+            <p>
         </div>
 
         <a href="index.html"><button>Back to Main Page</button></a>
