--- a/HTML/art.html
+++ b/HTML/art.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="website icon"tvpe="jpg" href="../Images/Rashid_Mugi PASSPORT PIC.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="art.css">
     <title>My Art Portfolio</title>
    
@@ -13,10 +14,11 @@
     <div class="About">
         <h1>Background</h1>
         <img src="../Images/wukong.gif" alt="" style="width: 700px; height: 400px;border-radius:25px; ">
-        <p>Hi, my name is Rashid Mugi, welcome to my Art portfolio 👋🎨</p>
-        <p>I am a self-taught artist with a passion for drawing ✍️ and creativity ✨</p>
-        <p>I am eager to bring your ideas to life 💡🖌️</p>
-        <p>Feel free to view my work and decide if you wish to commission me 😊🤝</p>
+        <h2>About Me</h2>
+        <p>Hi, my name is Rashid Mugi, welcome to my Art portfolio.
+           I am a self-taught artist with a passion for drawing and creativity.
+           I am eager to bring your ideas to life </p>
+        <P>Feel free to view my work and decide if you wish to commission me</P>   
 
     <div class="skills">
         <h2>Skills</h2>
@@ -25,46 +27,49 @@
             <li>Character Design</li>
             <li>Comic Art</li>
             <li>Digital Art</li>
+            <li>Graphic Design</li>
         </ul>       
     </div>
     </div>
     <article>
         <h1>Notable projects</h1>
-        <div class="onepiece">
-            <h2>OnePiece Painting</h2>
+        <div class="onepiece">            
             <video controls>
                 <source src="../Images/Gorosei.mp4" type="video/mp4">
             </video> 
-            <p>This painting was done as a commissioned artwork</p>   
-            <p>It is based on OnePiece characters called the Gorosei</p> 
+            <h2>OnePiece Painting</h2>
+            <p>This painting was done as a commissioned artwork.  
+               It is based on OnePiece characters called the Gorosei</p> 
         </div>
 
         <div class="contest">
-            <h2>Clip Studio Contest</h2>
             <video controls>
                 <source src="../Images/FoodIdeas.mp4" type="video/mp4">
             </video> 
-            <p>this painting was done in honour of the clip Studio Paint 42nd contest</p>   
-            <p>The theme for the contest was food and cuisines</p>
-            <p>It was a fun experience and I learned a lot</p>
+            <h2>Clip Studio Contest</h2>
+            <p>This painting was done in honour of the clip Studio Paint 42nd contest.  
+            The theme for the contest was food and cuisines.
+            It was a fun experience and I learned a lot.</p>
         </div>
 
-        <a href="index.html"> <button>BACK TO MAIN PAGE</button></a>
-    </article>
+        <a href="index.html" class="back-btn">BACK TO MAIN PAGE</a>
 
-     <footer>
-        <h2>Contact Me</h2>
+        <div class="footer_links">
+         <h2>Contact Me</h2>
         <a href="https://www.instagram.com/rashiddraws/" target="_blank">
-            <img src="../Images/instagram.png" alt="Instagram">
+            <i class="fa-brands fa-instagram"></i>
         </a>
         <a href="https://www.linkedin.com/in/rashid-mugi-04b634298/" target="_blank">
-            <img src="../Images/linkedin.png" alt="LinkedIn">
+            <i class="fa-brands fa-linkedin-in"></i>
         </a>
         <a href="https://github.com/RASHEEDOH" target="_blank">
-            <img src="../Images/github.png" alt="GitHub">
+            <i class="fa-brands fa-github"></i>
         </a>
-    </footer>
+    </div>
+    </article>
 
+
+    
     
 
 </body>
