Updated portfolio layout and software dev portfolio section

--- a/HTML/Software_dev.html
+++ b/HTML/Software_dev.html
@@ -74,6 +74,9 @@
                 <li>Adaptive maintenance</li>
                </ul>
             <p>
+                
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSKCRSPQBGeZU4NZNM3wX5H8i9KsYwP5FRrcs30EHvw-yLUka8LY2G7RVh823ky0w/pubhtml" width="100%" height="600px"style="border: none;"> </iframe>
+
         </div>
 
         <a href="index.html"><button>Back to Main Page</button></a>
