--- a/HTML/art.html
+++ b/HTML/art.html
@@ -34,22 +34,24 @@
     <article>
         <h1>Notable projects</h1>
         <div class="onepiece">            
-            <video controls>
-                <source src="../Images/Gorosei.mp4" type="video/mp4">
-            </video> 
             <h2>OnePiece Painting</h2>
             <p>This painting was done as a commissioned artwork.  
                It is based on OnePiece characters called the Gorosei</p> 
+            <video controls>
+                <source src="../Images/Gorosei.mp4" type="video/mp4">
+            </video>    
         </div>
 
         <div class="contest">
-            <video controls>
-                <source src="../Images/FoodIdeas.mp4" type="video/mp4">
-            </video> 
             <h2>Clip Studio Contest</h2>
             <p>This painting was done in honour of the clip Studio Paint 42nd contest.  
             The theme for the contest was food and cuisines.
             It was a fun experience and I learned a lot.</p>
+            <p>See timelapse below</p>
+            <video controls>
+                <source src="../Images/FoodIdeas.mp4" type="video/mp4">
+            </video> 
+            <p>More paintings like this are available on my Instagram.</p>
         </div>
 
         <a href="index.html" class="back-btn">BACK TO MAIN PAGE</a>
