--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,9 +25,17 @@
     
     <!--Relevant links to get to know me-->
     <div class="links">
-        <a href="../docs/Rashid_Mugi_CV.pdf" download><button>Download My CV</button></a>
-        <a href="Software_dev.html"><button class="Software_dev" href="">SOFTWARE DEVELOPMENT PORTFOLIO</button></a>
-        <a href="art.html"><button class="Artist">ARTIST PORTFOLIO</button></a>        
+        <a href="../docs/Rashid_Mugi_CV.pdf" download>
+            <button><i class="fa-solid fa-download"></i> DOWNLOAD CV</button>
+        </a>
+
+        <a href="Software_dev.html">
+            <button class="Software_dev"><i class="fa-solid fa-code"></i>SOFTWARE DEVELOPMENT PORTFOLIO</button>
+        </a>
+
+        <a href="art.html">
+            <button class="Artist"><i class="fa-solid fa-paintbrush"></i>ARTIST PORTFOLIO</button>
+        </a>
     </div>
 
     <!--this is the footer content-->
