Updated portfolio layout and software dev portfolio section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,7 +30,7 @@
         </a>
 
         <a href="Software_dev.html">
-            <button class="Software_dev"><i class="fa-solid fa-code"></i>SOFTWARE DEVELOPMENT PORTFOLIO</button>
+            <button class="Software_dev"><i class="fa-solid fa-code"></i>SOFTWARE DEV</button>
         </a>
 
         <a href="art.html">
