--- a/HTML/art.html
+++ b/HTML/art.html
@@ -13,7 +13,7 @@
     <h1 style="color: white; text-align: center;">Welcome to My Art Portfolio</h1>
     <div class="About">
         <h1>Background</h1>
-        <img src="../Images/wukong.gif" alt="" style="width: 700px; height: 400px;border-radius:25px; ">
+        <img src="../Images/wukong.gif" alt="">
         <h2>About Me</h2>
         <p>Hi, my name is Rashid Mugi, welcome to my Art portfolio.
            I am a self-taught artist with a passion for drawing and creativity.
